Fixed 1 line job text wrapping

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -522,6 +522,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-wrap: none;
+  white-space: nowrap;
   display: inline-block;
   width: 300px;
   height: 35px !important;
